<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_login"
        android:title="@string/menu_login"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never"/>

</menu>