<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- this layout fixes issues with 0 height in 'VerticallyUnboundedFrameLayout'. -->
    <FrameLayout
        android:layout_width="match_parent"
...
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.pr0gramm.app.ui.StatefulRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:overScrollMode="never"
...
