...
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            app:srcCompat="@drawable/ic_white_action_back" />

        <com.pr0gramm.app.ui.views.PlainTextAutoCompleteTextView
            android:id="@+id/search_term"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/action_search_simple"
            android:imeOptions="actionSearch"
...
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:minWidth="64dp"
                android:text="@string/search_advanced" />

            <Button
                android:id="@+id/search_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:minWidth="64dp"
...
