...
    <string name="upload_error_video_codec">Invalid codec - vp8 or h264 for video and aac, vorbis or opus for audio allowed.</string>
    <string name="upload_error_video_streams">Invalid streams - must contain exactly one video stream and at most one audio stream.</string>
    <string name="upload_error_video_container">Invalid container/codec combination, like vp8 in an mp4 codec.</string>
    <string name="upload_error_video">Reason:</string>
    <string name="dialog_dont_show_again">Don\'t show again</string>
    <string name="login_register">New account</string>
    <string name="feedback_appfeedback">App feedback or support</string>
    <string name="feedback_general">General pr0gramm support</string>
    <string name="feedback_email">E-Mail address</string>
    <string name="feedback_subject">Subject</string>
    <string name="feedback_name">Name</string>
    <string name="error_cloudflare">Looks like cloudflare is blocking your ip address.</string>
    <string name="error_blocked">Looks like your provider is blocking pr0gramm. Are you using some kind of free wifi?</string>
    <string name="error_proxy_timeout">A timeout occurred while accessing the pr0gramm servers.</string>
    <string name="feedback_delete_post_hint" translatable="false">Bei Löschanfragen bitte die exakte Adresse (URL), sowie ausreichende Beweise angeben, dass Du der Urheber des Bildes bist oder in seinem Auftrag handelst. Ist es dein eigener Upload, kannst du ihn auch selbst löschen, schaue dafür in die FAQ: https://pr0gramm.com/faq:delete</string>
    <string name="login_password_recovery">Forgot password</string>
    <string name="hint_email">Email address</string>
    <string name="submit">Submit</string>
    <string name="request_password_recovery_title">Password recovery</string>
    <string name="request_password_recovery_popup_hint">A mail containing a link to change recover the password was sent to the provided address.</string>
    <string name="action_change">Change</string>
    <string name="password_recovery_success">Password was changed successfully. You can now try to log in using the new password.</string>
    <string name="password_recovery_error">Failed to change password.</string>
    <string name="invites_no_invites_sent">No invites sent</string>
...
