...
            android:background="@color/input_background"
            android:hint="@string/feedback_email"
            android:inputType="textEmailAddress"
            android:padding="8sp" />

        <com.pr0gramm.app.ui.views.PlainEditText
            android:id="@+id/feedback_text"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/input_background"
...
